# notears

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md
.github/workflows/: benchmarks.yml  docs.yml  tests.yml
benches/: bench_end_to_end.rs  bench_matrix_ops.rs  bench_optimization.rs  notears_benchmarks.rs  profiling_utils.rs
docs/: API.md  CONFIGURATION.md  NOTEARS_Algorithm_Analysis_and_Comparison.md  NOTEARS_Documentation_Master_Index.md  NOTEARS_Quick_Reference_Guide.md  NOTEARS_Rust_Implementation_Guide.md
examples/: 01_quick_start.ipynb  02_configuration_best_practices.ipynb
src/: acyclicity.rs  lib.rs  optimization.rs  scoring.rs  types.rs  utils.rs
tests/: common.rs  integration_tests.rs  test_acyclicity.rs  test_benchmarks.rs  test_integration.rs  test_optimization.rs  test_scoring.rs
